--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,333 @@
 .container {
-  padding: 0 2rem;
+  padding-top: 10vh;
+  max-width: 100vw;
+  /* width: 100vw; */
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* margin: 50px; */
 }
 
 .main {
-  min-height: 100vh;
+  /* margin: 50px; */
+  /* min-height: 92vh; */
   padding: 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
   text-align: center;
 }
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.header {
   display: flex;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+}
+.navbar {
+  max-height: 10vh;
+  color: black;
+  z-index: 1000;
+  padding: 8px;
+  position: fixed;
+  top: 0;
+  width: 90%;
+  max-width: 90%;
+  color: white;
+  /* background-color: #111; */
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  /* box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px; */
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+.secondsection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  /* padding: 0 20px; */
+  flex: 1 1;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+.navmenu {
+  /* margin-left: auto; */
+  padding: 0 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  flex-wrap: wrap;
+}
+
+.navitem {
+  margin-left: 25px;
+  transition: transform 0.2s;
+}
+
+.navitem:hover {
+  transform: scaleX(1.1);
+}
+
+.navlink {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.hamburger {
+  background-color: #231942;
+  display: none;
+  color: #dddbf1;
+  border-radius: 8px;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
+    5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.hamburger:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
+}
+
+.bar {
+  display: block;
+  width: 32px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: #ffffff;
+}
+
+.hr {
+  margin: 10px;
+  width: 70%;
+}
+
+.button {
+  /* font-family: "Open Sans", sans-serif; */
+  font-size: 18px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bolder;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  background: #7effe0;
+  padding: 0.25em 0.5em;
+  /* margin-top: 12px; */
+  border-radius: 10px;
+  border: 4px solid rgb(0, 0, 0);
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.button:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
+}
+
+.xdc {
+  max-width: 400px;
+}
+
+.about {
+  font-size: 24px;
+  font-weight: bold;
+  color: #7effe0;
+}
+
+.code {
+  padding: 20px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  text-align: justify;
+  /* 
+  width: 80%;
+  max-width: 80%; */
+  /* max-width: 1000px; */
+  max-height: 500px;
+  border-radius: 10px;
+  background-color: #000000;
+  /* border: 2px solid gray; */
+
+  font-size: 14px;
+}
+.code::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #000000;
+}
+
+.code::-webkit-scrollbar {
+  width: 8px;
+  background-color: #000000;
+  border-radius: 10px;
+}
+
+.code::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+
+.code pre::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #000000;
+}
+
+.code pre::-webkit-scrollbar {
+  width: 5px;
+  background-color: #000000;
+  border-radius: 10px;
+}
+
+.code pre::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+.code pre {
+  width: 100%;
+}
+
+.contract {
+  font-size: 35px;
+  margin-bottom: 5px;
+  margin-top: 40px;
+  color: #7effe0;
+}
+
+.features {
+  text-align: start;
+  /* color: #7effe0; */
+}
+.hero {
+  width: 90%;
+  max-width: 100%;
+  height: 90vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+.heroinsidefirst {
+  width: 50%;
+  text-align: left;
+}
+.contractdiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 20px 0px;
+}
+
+.herosecond {
+  width: 100%;
+  max-width: 100vw;
+  /* height: 100vh; */
+}
+
+.parentofcode {
+  max-width: 80%;
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(90deg, #945dd6, #f46737, #13adc7);
+  padding: 5px;
+  border-radius: 10px;
+}
+
+@media (min-width: 768px) {
+  .button {
+    padding: 0.25em 0.75em;
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
+@media only screen and (max-width: 768px) {
+  /* .connect {
+    visibility: hidden;
+  } */
+  .hero {
+    height: auto;
+  }
+  .container {
+    max-width: 100%;
   }
   .code {
-    background: #111;
+    max-width: 100%;
+    padding: 5px;
   }
-  .logo img {
-    filter: invert(1);
+  .herosecond {
+    width: 100%;
+  }
+
+  .footer a {
+    margin: 2px;
+    font-size: 14px;
+  }
+
+  .navbar {
+    justify-content: space-around;
+  }
+
+  .navmenu {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-top: 2px solid rgb(211, 211, 211);
+    border-bottom: 2px solid rgb(211, 211, 211);
+    z-index: 100;
+    position: fixed;
+    left: -100%;
+    top: 3.3rem;
+    flex-direction: column;
+    background: rgb(18, 18, 18);
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+  }
+
+  .navmenu.active {
+    left: 0;
+  }
+
+  .navitem {
+    margin: 2.5rem 0;
+  }
+
+  .hamburger {
+    /* margin-left: auto; */
+    display: block;
+    cursor: pointer;
+  }
+
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.active .bar:nth-child(1) {
+    -webkit-transform: translateY(8px) rotate(45deg);
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger.active .bar:nth-child(3) {
+    -webkit-transform: translateY(-8px) rotate(-45deg);
+    transform: translateY(-8px) rotate(-45deg);
   }
 }
