--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #000000;
+  color: #ffffff;
 }
 
 a {
@@ -15,6 +17,47 @@ a {
   box-sizing: border-box;
 }
 
+/* lobster-two-regular - latin */
+@font-face {
+  font-family: "Lobster Two";
+  font-style: normal;
+  font-weight: 400;
+  /* src: url("../src/assets/fonts/lobster-two-v18-latin-regular.eot"); IE9 Compat Modes */
+  src: local(""),
+    url("../src/assets/fonts/lobster-two-v18-latin-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../src/assets/fonts/lobster-two-v18-latin-regular.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("../src/assets/fonts/lobster-two-v18-latin-regular.woff")
+      format("woff"),
+    /* Modern Browsers */
+      url("../src/assets/fonts/lobster-two-v18-latin-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../src/assets/fonts/lobster-two-v18-latin-regular.svg#LobsterTwo")
+      format("svg"); /* Legacy iOS */
+}
+/* lobster-two-700 - latin */
+@font-face {
+  font-family: "Lobster Two";
+  font-style: normal;
+  font-weight: 700;
+  /* src: url("../src/assets/fonts/lobster-two-v18-latin-700.eot"); IE9 Compat Modes */
+  src: local(""),
+    url("../src/assets/fonts/lobster-two-v18-latin-700.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */ url("../src/assets/fonts/lobster-two-v18-latin-700.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("../src/assets/fonts/lobster-two-v18-latin-700.woff") format("woff"),
+    /* Modern Browsers */
+      url("../src/assets/fonts/lobster-two-v18-latin-700.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../src/assets/fonts/lobster-two-v18-latin-700.svg#LobsterTwo")
+      format("svg"); /* Legacy iOS */
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
