--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -54,6 +54,8 @@
 .logo {
   /* padding: 0 20px; */
   flex: 1 1;
+  font-family: "Merriweather Sans";
+  font-weight: 700;
 }
 
 .navmenu {
@@ -77,7 +79,8 @@
 
 .navlink {
   font-size: 16px;
-  font-weight: 500;
+  font-family: "Merriweather Sans";
+  font-weight: 400;
 }
 
 .hamburger {
@@ -213,6 +216,8 @@
 
 .features {
   text-align: start;
+  font-family: "Merriweather Sans";
+  font-weight: 400;
   /* color: #7effe0; */
 }
 .hero {
@@ -236,6 +241,7 @@
   align-items: center;
   width: 100%;
   margin: 20px 0px;
+  font-family: "Merriweather Sans";
 }
 
 .herosecond {
