--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,47 +17,53 @@ a {
   box-sizing: border-box;
 }
 
-/* lobster-two-regular - latin */
+/* merriweather-sans-700 - latin */
 @font-face {
-  font-family: "Lobster Two";
-  font-style: normal;
-  font-weight: 400;
-  /* src: url("../src/assets/fonts/lobster-two-v18-latin-regular.eot"); IE9 Compat Modes */
-  src: local(""),
-    url("../src/assets/fonts/lobster-two-v18-latin-regular.eot?#iefix")
-      format("embedded-opentype"),
-    /* IE6-IE8 */ url("../src/assets/fonts/lobster-two-v18-latin-regular.woff2")
-      format("woff2"),
-    /* Super Modern Browsers */
-      url("../src/assets/fonts/lobster-two-v18-latin-regular.woff")
-      format("woff"),
-    /* Modern Browsers */
-      url("../src/assets/fonts/lobster-two-v18-latin-regular.ttf")
-      format("truetype"),
-    /* Safari, Android, iOS */
-      url("../src/assets/fonts/lobster-two-v18-latin-regular.svg#LobsterTwo")
-      format("svg"); /* Legacy iOS */
-}
-/* lobster-two-700 - latin */
-@font-face {
-  font-family: "Lobster Two";
+  font-family: "Merriweather Sans";
   font-style: normal;
   font-weight: 700;
-  /* src: url("../src/assets/fonts/lobster-two-v18-latin-700.eot"); IE9 Compat Modes */
+  src: url("../src/assets/fonts/merriweather-sans-v22-latin-700.eot"); /* IE9 Compat Modes */
   src: local(""),
-    url("../src/assets/fonts/lobster-two-v18-latin-700.eot?#iefix")
+    url("../src/assets/fonts/merriweather-sans-v22-latin-700.eot?#iefix")
       format("embedded-opentype"),
-    /* IE6-IE8 */ url("../src/assets/fonts/lobster-two-v18-latin-700.woff2")
+    /* IE6-IE8 */
+      url("../src/assets/fonts/merriweather-sans-v22-latin-700.woff2")
       format("woff2"),
     /* Super Modern Browsers */
-      url("../src/assets/fonts/lobster-two-v18-latin-700.woff") format("woff"),
+      url("../src/assets/fonts/merriweather-sans-v22-latin-700.woff")
+      format("woff"),
     /* Modern Browsers */
-      url("../src/assets/fonts/lobster-two-v18-latin-700.ttf")
+      url("../src/assets/fonts/merriweather-sans-v22-latin-700.ttf")
       format("truetype"),
     /* Safari, Android, iOS */
-      url("../src/assets/fonts/lobster-two-v18-latin-700.svg#LobsterTwo")
+      url("../src/assets/fonts/merriweather-sans-v22-latin-700.svg#MerriweatherSans")
       format("svg"); /* Legacy iOS */
 }
+
+/* merriweather-sans-regular - latin */
+
+@font-face {
+  font-family: "Merriweather Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../src/assets/fonts/merriweather-sans-v22-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("../src/assets/fonts/merriweather-sans-v22-latin-regular.eot?#iefix")
+      format("embedded-opentype"),
+    /* IE6-IE8 */
+      url("../src/assets/fonts/merriweather-sans-v22-latin-regular.woff2")
+      format("woff2"),
+    /* Super Modern Browsers */
+      url("../src/assets/fonts/merriweather-sans-v22-latin-regular.woff")
+      format("woff"),
+    /* Modern Browsers */
+      url("../src/assets/fonts/merriweather-sans-v22-latin-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */
+      url("../src/assets/fonts/merriweather-sans-v22-latin-regular.svg#MerriweatherSans")
+      format("svg"); /* Legacy iOS */
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
