--- a/styles/index.css
+++ b/styles/index.css
@@ -81,6 +81,15 @@ button.herofirstbutton {
   /* z-index: 1; */
 }
 
+.parentofcode {
+  max-width: 80%;
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(90deg, #945dd6, #f46737, #13adc7);
+  padding: 5px;
+  border-radius: 10px;
+}
+
 @media only screen and (max-width: 768px) {
   h1.heroh1 {
     font-size: 2rem;
