--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -49,6 +49,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin-top: 50px;
 }
 
 .logo {
@@ -253,6 +254,25 @@
   max-width: 100vw;
   /* height: 100vh; */
 }
+.footer {
+  display: flex;
+  flex: 1;
+  padding: 1rem 0;
+  border-top: 1px solid #eaeaea;
+  justify-content: center;
+  align-items: center;
+  font-family: "Merriweather Sans";
+  font-weight: 400;
+  width: 100%;
+  font-size: 1.3rem;
+}
+.footer span {
+  padding: 0 1rem;
+}
+.footer a {
+  margin: 10px;
+  text-decoration: underline;
+}
 
 @media (min-width: 768px) {
   .button {
@@ -265,7 +285,7 @@
     visibility: hidden;
   } */
   .hero {
-    height: 90vh;
+    height: 80vh;
     flex-direction: column-reverse;
     justify-content: center;
   }
