--- a/styles/index.css
+++ b/styles/index.css
@@ -14,6 +14,10 @@ h1.heroh1 {
   font-weight: 700;
   --animate-duration: 800ms;
   --animate-delay: 0.1s;
+  color: transparent;
+  background: linear-gradient(270deg, #ff7700, #ff4c00, #945dd6, #13adc7);
+  background-position: 200% 0;
+  background-clip: text;
 }
 .heroinsidesecond {
   width: 50%;
@@ -63,22 +67,54 @@ p.herop1:last-of-type {
   margin: 0px 0px 30px 0px;
 }
 
-button.herofirstbutton,
 button.herofirstbutton-2 {
   margin-top: 10px;
-
+  cursor: pointer;
   color: white;
   font-family: "Merriweather Sans";
   font-weight: 400;
   /* background-color: #f46737; */
   border-radius: 99999px;
-  border: 2px solid #ffa011;
+  border: 2px solid #ffffff;
   background: linear-gradient(90deg, #ff4c00, #ff7700);
+  /* background-color: transparent; */
   -webkit-box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.3);
   -moz-box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.3);
   box-shadow: 0px 5px 10px 0px rgba(255, 255, 255, 0.3);
-  --animate-duration: 800ms;
-  --animate-delay: 0.1s;
+  position: relative;
+  z-index: 5;
+}
+button.herofirstbutton {
+  margin-top: 10px;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: "Merriweather Sans";
+  font-weight: 400;
+  /* background-color: #f46737; */
+  border-radius: 99999px;
+  border: 2px solid #ffffff;
+  background-color: #ffffff;
+  position: relative;
+  z-index: 5;
+  /* background-color: transparent; */
+}
+button.herofirstbutton::before,
+button.herofirstbutton::after {
+  border-radius: 99999px;
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background: linear-gradient(270deg, #ff4c00, #945dd6, #13adc7, #ff7700);
+  background-size: 400%;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  z-index: -1;
+  animation: animate 20s linear infinite;
+}
+
+button.herofirstbutton::after {
+  filter: blur(30px);
 }
 button.herofirstbutton {
   padding: 1rem 3rem;
@@ -159,6 +195,20 @@ span.span-8 {
   animation: slideInDown; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 800ms;
   animation-delay: 3.5s;
+}
+
+@keyframes animate {
+  0% {
+    background-position: 0 0;
+  }
+
+  50% {
+    background-position: 300% 0;
+  }
+
+  100% {
+    background-position: 0 0;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
